--- a/footer.scss
+++ b/footer.scss
@@ -8,6 +8,7 @@
   align-items: center;
   justify-content: center;
   padding: 200px 0 100px 0;
+  background-color: rules.$lightblue;
 
   .footer-content {
     width: 80%;
@@ -18,7 +19,7 @@
     .left-content {
       display: flex;
       flex-direction: column;
-      gap: 100px;
+      gap: 170px;
 
       .left-top {
         display: flex;
@@ -70,6 +71,48 @@
           @include rules.blacktext;
           text-decoration: none;
           cursor: pointer;
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: rules.$phone) {
+  .footer-section {
+    padding: 100px 0 15px 0;
+    .footer-content {
+      flex-direction: column-reverse;
+      gap: 10px;
+      align-items: start;
+      .left-content {
+        .left-top {
+          display: none;
+        }
+
+        h4 {
+          font-size: 14px;
+          font-weight: 500;
+          line-height: 20px;
+          transform: translateX(-45px);
+        }
+      }
+
+      .right-content {
+        gap: 100px;
+
+        nav {
+          gap: 10px;
+
+          h5 {
+            font-size: 16px;
+            font-weight: 500;
+          }
+
+          a {
+            font-size: 14px;
+            font-weight: 400;
+            line-height: 16px;
+          }
         }
       }
     }
