--- a/header.css
+++ b/header.css
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&family=Sen:wght@400;500;600;700;800&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&family=Sen:wght@400;500;600;700;800&display=swap");
 header {
+  width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -55,4 +56,10 @@ header .header-content .account a {
   line-height: 32px;
   text-decoration: none;
   cursor: pointer;
+}
+
+@media (max-width: 500px) {
+  header .header-content nav {
+    display: none;
+  }
 }
