--- a/header.scss
+++ b/header.scss
@@ -3,6 +3,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&family=Sen:wght@400;500;600;700;800&display=swap");
 
 header {
+  width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -45,6 +46,16 @@ header {
             text-decoration: none;
             cursor: pointer;
         }
+    }
+  }
+}
+
+@media (max-width: rules.$phone) {
+  header {
+    .header-content {
+      nav {
+        display: none;
+      }
     }
   }
 }
