--- a/main.css
+++ b/main.css
@@ -3,10 +3,12 @@
 body {
   margin: 0;
   padding: 0;
-  background-image: url(./assets/HG.svg);
-  background-color: linear-gradient(180deg, rgba(11, 29, 38, 0) 0%, #9FD5EF 61.38%);
+  background-color: linear-gradient(180deg, rgba(11, 29, 38, 0) 0%, #9fd5ef 61.38%);
   -o-object-fit: cover;
      object-fit: cover;
+}
+body main {
+  height: 3690px;
 }
 body * {
   font-family: Manrope;
@@ -23,8 +25,10 @@ h6 {
 
 .hero-section {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
+  background-image: url(./assets/HG.svg);
 }
 .hero-section .section-content {
   width: 90%;
@@ -155,7 +159,17 @@ h6 {
   display: flex;
   align-items: center;
   justify-content: center;
-  padding-top: 240px;
+  transform: translateY(-100px);
+  z-index: 10;
+  position: relative;
+  background: #9FD5EF;
+}
+.card-section .blue-shadow {
+  position: absolute;
+  top: -350px;
+  width: 100%;
+  height: 700px;
+  background: linear-gradient(180deg, rgba(11, 29, 38, 0) 0%, #9FD5EF 40.38%);
 }
 .card-section .card-wrapper {
   width: 80%;
@@ -185,11 +199,11 @@ h6 {
   font-weight: 700;
   line-height: 240px;
   opacity: 0.1;
-  transform: translate3d(-230px, -250px, 0);
+  transform: translate3d(-330px, -230px, 0);
   z-index: 2;
 }
 .card-section .card-wrapper .card .card-content .card-content-center {
-  width: 70%;
+  width: 65%;
   display: flex;
   flex-direction: column;
   gap: 25px;
@@ -249,4 +263,53 @@ h6 {
   font-style: normal;
   font-weight: 700;
   line-height: 32px;
+}
+
+@media (max-width: 500px) {
+  .hero-section .section-content {
+    width: 100%;
+    justify-content: center;
+    padding: 100px 0 300px 0;
+  }
+  .hero-section .section-content .links-left {
+    display: none;
+  }
+  .hero-section .section-content .content-center h1 {
+    font-size: 44px;
+    font-weight: 300;
+    line-height: 50px;
+  }
+  .hero-section .section-content .links-right {
+    display: none;
+  }
+  .card-section .card-wrapper .card {
+    display: flex;
+    flex-direction: column;
+  }
+  .card-section .card-wrapper .card .card-content {
+    width: 450px;
+  }
+  .card-section .card-wrapper .card .card-content h1 {
+    display: none;
+  }
+  .card-section .card-wrapper .card .card-content .card-content-center {
+    width: 100%;
+  }
+  .card-section .card-wrapper .card .card-content .card-content-center .card-top h5 {
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 16px;
+  }
+  .card-section .card-wrapper .card .card-content .card-content-center h2 {
+    font-size: 32px;
+    font-weight: 300;
+  }
+  .card-section .card-wrapper .card .card-content .card-content-center span {
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 16px;
+  }
+  .card-section .card-wrapper .card .card-content .card-content-center .card-bot {
+    display: none;
+  }
 }
